--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,9 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-android:4.45'
     compile 'com.android.support:recyclerview-v7:22.0.+'
 
+    compile('com.mikepenz.materialdrawer:library:2.8.2@aar') {
+        transitive = true
+    }
+
 
 }
