--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.positivo.rafaellcarloss.apppositivo"
-        minSdkVersion 10
+        minSdkVersion 11
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -25,6 +25,9 @@ dependencies {
     compile 'com.android.support:support-v4:22.0.0'
     compile 'com.j256.ormlite:ormlite-android:4.45'
     compile 'com.android.support:recyclerview-v7:22.0.+'
+    compile 'com.github.medyo:fancybuttons:1.4@aar'
+    compile 'com.android.support:design:22.2.1'
+    compile 'com.jakewharton:butterknife:7.0.1'
 
     compile('com.mikepenz.materialdrawer:library:2.8.2@aar') {
         transitive = true
