--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile 'com.github.medyo:fancybuttons:1.4@aar'
     compile 'com.android.support:design:22.2.1'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.squareup.okhttp:okhttp:2.5.0'
 
     compile('com.mikepenz.materialdrawer:library:2.8.2@aar') {
         transitive = true
