--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     compile 'com.android.support:design:22.2.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
+    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+
 
     compile('com.mikepenz.materialdrawer:library:2.8.2@aar') {
         transitive = true
